--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			}
 		}
 	</style>
-	<link rel=icon type=image/svg+xml href=/favicon.ico>
+	<link rel=icon href=/favicon.ico>
 	<meta name=viewport content="width=device-width,initial-scale=1.0">
 	<body>
 		<article id=window></article>
